# emAIcs

./: .gitignore  .pre-commit-config.yaml  Makefile  README.org  emaics.el  pyproject.toml  server.py
backends/llama/: api.py
backends/openai/: api.py
models/alpaca_lora/: .gitignore  install.sh
models/llama/: model.py
