[tool.poetry]
name = "emaics"
version = "0.1.0"
description = ""
authors = ["Anselm Coogan <anselm.coogan@icloud.com>"]

[tool.poetry.dependencies]
python = "^3.8"
json-rpc = "^1.14.0"
Werkzeug = "^2.3.4"
requests = "^2.30.0"
torch = "^2.0.1"

[tool.poetry.dev-dependencies]
mypy = "^1.3.0"
pytest = "^7.3.1"
black = "^23.3.0"
ruff = "^0.0.267"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
